--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bluebird": "^3.7.2",
     "commander": "^7.2.0",
     "csv-parser": "^3.0.0",
+    "csv-write-stream": "^2.0.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
