--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "commander": "^7.2.0",
     "csv-parser": "^3.0.0",
     "csv-write-stream": "^2.0.0",
+    "lodash": "^4.17.21",
     "winston": "^3.3.3"
   },
   "devDependencies": {
